--- a/app/src/main/res/layout/activity_trending_display.xml
+++ b/app/src/main/res/layout/activity_trending_display.xml
@@ -28,6 +28,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/trending"
+                android:textAllCaps="true"
                 android:textColor="@android:color/black"
                 android:textSize="36sp" />
 
