--- a/app/src/main/res/layout/activity_now_playing_display.xml
+++ b/app/src/main/res/layout/activity_now_playing_display.xml
@@ -16,7 +16,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             tools:context=".NowPlayingDisplay"
             android:orientation="vertical">
 
@@ -28,7 +28,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Now Playing"
+                android:text="@string/now_playing"
+                android:textAllCaps="true"
                 android:textColor="@android:color/black"
                 android:textSize="36sp" />
 
@@ -53,7 +54,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="Upcoming Movies"
+                android:text="@string/upcoming_movies"
+                android:textAllCaps="true"
                 android:textColor="@android:color/black"
                 android:textSize="36sp" />
 
