--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,42 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
+    android:background="@color/colorMovieDBgreen"
     tools:context=".SplashScreen"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:gravity="center">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="120dp"
-        android:gravity="center"
-        android:text="@string/app_name"
-        android:textAllCaps="false"
-        android:textColor="@color/colorMovieDBgreen"
-        android:textSize="64sp"
-        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/logoImage"
-        android:layout_width="239dp"
-        android:layout_height="251dp"
+        android:layout_width="252dp"
+        android:layout_height="248dp"
         android:layout_gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_movie_black_24dp" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_logo" />
+        android:layout_width="174dp"
+        android:layout_height="98dp"
+        android:layout_gravity="center_horizontal"
+        app:srcCompat="@drawable/ic_logo2" />
 
 </LinearLayout>
