--- a/app/src/main/res/layout/activity_now_playing_display.xml
+++ b/app/src/main/res/layout/activity_now_playing_display.xml
@@ -25,8 +25,10 @@
                 layout="@layout/my_toolbar" />
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:drawableStart="@drawable/playing"
                 android:gravity="center"
                 android:text="@string/now_playing"
                 android:textAllCaps="true"
@@ -51,8 +53,10 @@
                 android:background="@color/colorMovieDBgreen" />
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:drawableStart="@drawable/playing"
                 android:gravity="center"
                 android:text="@string/upcoming_movies"
                 android:textAllCaps="true"
