--- a/app/src/main/res/layout/activity_actor_info.xml
+++ b/app/src/main/res/layout/activity_actor_info.xml
@@ -31,6 +31,11 @@
                 />
 
             <TextView
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/colorMovieDBgreen" />
+
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -150,6 +155,12 @@
                     android:layout_marginStart="8dp"
                     android:textSize="18sp"/>
             </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/colorMovieDBgreen"
+                android:layout_marginTop="2dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
