--- a/app/src/main/res/layout/recommendation_listitem.xml
+++ b/app/src/main/res/layout/recommendation_listitem.xml
@@ -1,43 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
+    android:id="@+id/rec_layout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:card_view="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/rec_layout"
-    android:background="@color/colorMovieDBgreen"
-    >
+    android:background="@color/colorMovieDBgreen">
 
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_margin="2dp"
-        card_view:cardCornerRadius="3dp"
-        card_view:cardElevation="6dp"
-        card_view:cardUseCompatPadding="true">
+        card_view:cardUseCompatPadding="false">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/poster_imageView"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
-                android:layout_centerHorizontal="true"
-                android:src="@drawable/logo" />
+        <ImageView
+            android:id="@+id/poster_imageView"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/logo" />
 
-            <TextView
-                android:id="@+id/rec_textView"
-                android:layout_width="80dp"
-                android:layout_height="20dp"
-                android:layout_below="@+id/poster_imageView"
-                android:layout_centerHorizontal="true"
-                android:gravity="center"
-                android:text="test"
+        <!--<TextView-->
+        <!--android:id="@+id/rec_textView"-->
+        <!--android:layout_width="80dp"-->
+        <!--android:layout_height="20dp"-->
+        <!--android:layout_below="@+id/poster_imageView"-->
+        <!--android:layout_centerHorizontal="true"-->
+        <!--android:gravity="center"-->
 
-                />
-        </RelativeLayout>
+        <!--/>-->
     </android.support.v7.widget.CardView>
 </RelativeLayout>
