Added recyclerview animations for onclick, and when the list is loaded in.

--- a/app/src/main/res/layout/activity_display_results.xml
+++ b/app/src/main/res/layout/activity_display_results.xml
@@ -62,7 +62,8 @@
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:layoutAnimation="@anim/layout_animation_fall_down">
 
             </android.support.v7.widget.RecyclerView>
 
