--- a/app/src/main/res/layout/activity_trending_display.xml
+++ b/app/src/main/res/layout/activity_trending_display.xml
@@ -15,7 +15,7 @@
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             tools:context=".TrendingDisplay">
 
@@ -43,6 +43,7 @@
                 android:id="@+id/trending_recyclerview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layoutAnimation="@anim/layout_animation_fall_down"
                 >
             </android.support.v7.widget.RecyclerView>
 
