--- a/app/src/main/res/layout/activity_filter_results.xml
+++ b/app/src/main/res/layout/activity_filter_results.xml
@@ -149,7 +149,8 @@
             android:id="@+id/filterRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/hide_button" />
+            android:layout_below="@id/hide_button"
+            android:layoutAnimation="@anim/layout_animation_fall_down"/>
 
         <!--<TextView-->
         <!--android:id="@+id/border2"-->
