--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/parentLayout"
-    android:background="@color/colorMovieDBgreen">
+    android:background="@color/colorMovieDBgreen"
+    >
 
 
     <!--Use the circular image view dependency-->
@@ -17,8 +18,6 @@
         android:layout_marginTop="1dp"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="1dp"
-        card_view:cardCornerRadius="0dp"
-        card_view:cardElevation="0dp"
         card_view:cardUseCompatPadding="false">
 
         <RelativeLayout
@@ -38,9 +37,9 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_centerInParent="true"
-                android:layout_marginLeft="29dp"
+                android:layout_marginStart="29dp"
                 android:layout_marginTop="29dp"
-                android:layout_toRightOf="@id/circularImageView"
+                android:layout_toEndOf="@id/circularImageView"
                 android:text="@string/test"
                 android:textColor="#000"
                 android:textSize="18sp" />
@@ -54,10 +53,10 @@
                 android:layout_marginStart="40dp">
 
                 <TextView
-                    android:id="@+id/details_textview"
+                    android:id="@+id/view_textview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="View"
+                    android:text="@string/view"
                     android:textSize="18sp" />
 
                 <TextView
@@ -65,7 +64,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="40dp"
-                    android:text="Add"
+                    android:text="@string/add"
                     android:textSize="18sp" />
 
                 <TextView
@@ -73,7 +72,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="40dp"
-                    android:text="Rate"
+                    android:text="@string/rate"
                     android:textSize="18sp" />
             </LinearLayout>
 
