--- a/app/src/main/res/layout/layout_listitem.xml
+++ b/app/src/main/res/layout/layout_listitem.xml
@@ -54,7 +54,7 @@
                 android:layout_marginStart="29dp"
                 android:layout_marginBottom="8dp"
                 android:layout_toEndOf="@+id/circularImageView"
-                android:visibility="visible">
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/view_textview"
