--- a/app/src/main/res/layout/activity_display_results.xml
+++ b/app/src/main/res/layout/activity_display_results.xml
@@ -58,13 +58,40 @@
                 android:layout_height="1dp"
                 android:background="@color/colorMovieDBgreen" />
 
+            <TextView
+                android:id="@+id/displayMoviesTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/movies"
+                android:textColor="@android:color/black"
+                android:textSize="36sp"
+                android:visibility="gone" />
+
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:layoutAnimation="@anim/layout_animation_fall_down">
+            </android.support.v7.widget.RecyclerView>
 
+            <TextView
+                android:id="@+id/displayTVTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/tv_shows"
+                android:textColor="@android:color/black"
+                android:textSize="36sp"
+                android:visibility="gone" />
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/tvRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layoutAnimation="@anim/layout_animation_fall_down">
             </android.support.v7.widget.RecyclerView>
 
             <TextView
