Implemented tvDetails Activity

--- a/app/src/main/res/layout/activity_tvdetails.xml
+++ b/app/src/main/res/layout/activity_tvdetails.xml
@@ -7,7 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TVDetailsActivity"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:id="@+id/tv_drawerLayout">
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
